@@ -18,7 +18,7 @@ non-root, the default ports are 8000 and 2121, respectively.
 Use \fB-u nobody\fR to run under a different UID than root.  This is
 done after binding the server ports, so it is safe to use -u and still
 bind to port 80 -- in fact, it is recommended not to run gatling as
-superuse.
+superuser.
 
 Use \fB-c /home/www\fR to chdir and chroot to another directory than the
 current working directory.  It is recommended to run gatling in a chroot
